dropshot/tests/fail/bad_trait_only20.stderr
error: missing field `tags`
  --> tests/fail/bad_trait_only20.rs:12:18
   |
12 |     tag_config = {}
   |                  ^^
